# pddgen

./: .dockerignore  .gitignore  README.md  RUNBOOK.md  ba_co-pilot_architecture  diagram.py  docker-compose.yml  masterplan.md  package.json  pyrightconfig.json  release.json  tsconfig.base.json
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: test_admin_console_only.py  test_admin_preferences.py  test_artifact_preview_mapping.py  test_artifact_preview_route.py  test_artifact_validation.py  test_auth_csrf_flow.py  test_billing_url_validation.py  test_document_export_enrichment.py  test_document_export_package.py  test_document_template_renderer.py  test_draft_generation_worker.py  test_generation_timing.py  test_gst_invoice_service.py  test_job_enqueue_producers.py  test_llm_usage.py  test_optional_video.py  test_payments_port.py  test_portability_wiring.py  test_process_diagram_scope_fallback.py  test_schema_validation.py  test_session_grounded_qa_skill.py  test_storage_preview_urls.py  test_user_quota.py
worker/: .env.example  .gitignore  Dockerfile  WORKER_PIPELINE.md  __init__.py  bootstrap.py  celery_app.py  docker-compose.dependencies.yml  pyproject.toml  requirements.txt
worker/ai_skills/: client.py  registry.py  runtime.py  transcript_interpreter_compat.py
worker/grouping/: __init__.py  canonical_merge.py  canonical_merge_grouping.py  canonical_merge_matching.py  grouping_ai_adapters.py  grouping_assignment_flow.py  grouping_capabilities.py  grouping_decisions.py  grouping_identity_flow.py  grouping_matching.py  grouping_models.py  grouping_profile_builder.py  grouping_profile_lists.py  grouping_profiles.py  grouping_service.py  grouping_summaries.py  grouping_summary_refresh.py  grouping_text.py  grouping_title_support.py  grouping_titles.py  grouping_workflow_summary.py  segmentation_ai_boundary.py  segmentation_ai_enrichment.py  segmentation_ai_strategies.py  segmentation_boundary_heuristics.py  segmentation_chunking.py  segmentation_enrichment_heuristics.py  segmentation_heuristics.py  segmentation_interpreter_adapters.py  segmentation_service.py  strategy_interfaces.py  strategy_registry.py
worker/media/: video_frame_extractor.py
worker/pipeline/: __init__.py  composition.py  contracts.py  pipeline.py  (+3 more)
(+669 files in other folders)
