[project]
name = "pdd-generator-backend"
version = "0.1.0"
description = "FastAPI backend for AI-assisted PDD drafting"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4.0",
  "docxtpl>=0.18.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "pydantic-settings>=2.6.1",
  "psycopg[binary]>=3.2.3",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.32.0"
]

[tool.uv]
# TODO: Add lockfile and workspace settings when local development is wired.
