[project]
name = "pdd-generator-worker"
version = "0.1.0"
description = "Celery worker for AI-assisted PDD drafting"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4.0",
  "httpx>=0.28.1",
  "pydantic-settings>=2.6.1",
  "psycopg[binary]>=3.2.3",
  "sqlalchemy>=2.0.36"
]

[tool.uv]
# TODO: Add lockfile and workspace settings when local development is wired.
